Ch_07_istio_ambient_service_mesh/07_03_istio_ambient_zero_trust/04-security/01-peer-authentication.yaml
# 07_03_istio_ambient_zero_trust/04-security/01-peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: shop
spec:
  # selector 없음 → shop 네임스페이스 전체 적용
  mtls:
    mode: STRICT
